2009-09-14  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvasd/openvasd.c: Cosmetics.

	* openvasd/openvasd.c (init_network): Print error message to stderr and
	not only to log if socket acquiration failed.

2009-09-14  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvasd/save_tests.c: Added TODOS, removed K&R headers, documentation
	, further cosmetics.

2009-09-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Adapt Scanner to changes in API of store.

	* openvasd/openvasd.c (init_openvasd): Use new
	API of store_init.

	* openvasd/nasl_plugins.c (nasl_plugin_add): Use
	new API of store_load_plugin.

	* openvasd/nes_plugins.c (nes_plugin_add): Use
	new API of store_load_plugin.

	* openvasd/oval_plugins.c (oval_plugin_add): Use
	new API of store_load_plugin.

2009-09-10  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvasd/save_tests.c (save_tests_write_data): Minor reformatting,
	added todo about possible mem leak, documentation.

	* openvasd/save_tests.c (save_tests_playback): Reformatted.

2009-09-10  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* doc/Doxyfile, doc/Doxyfile_full: Added alias to generate todo list
	from both lower and uppercase @TODOs.

2009-09-08  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Fixed broken build and reduced code base by:
	Replacing/merged pluginschedulers name cache by arglists ones. Note that
	the latter is considerably smaller and might thus lead to more
	collisions and decreased performance, but improves maintainability and
	memory imprint.

	* openvasd/pluginscheduler.c (struct name_cache, cache_init,
	cache_get_name, cache_add_name, cache_inc, cache_dec): Removed, are
	linked with openvas-libraries.

	* openvasd/pluginscheduler.c (HASH_MAX): Decreased to value found in
	openvas-libraries/misc/arglists.c.

	* openvasd/pluginscheduler.c (mkhash): Replaced by implementation found
	in openvas-libraries/misc/arglists.c .
